--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2034,3 +2034,14 @@ section {
   font-size: 13px;
   color: #012970;
 }
+.google-maps{
+position:relative;
+padding-bottom:75%;
+height:0;
+overflow:hidden;
+}
+.google-maps iframe{
+position:absolute;
+top:0;
+width:100%;
+height:100%}
